# orbit

./: .gitignore  LICENSE  README.md  monitoring_deployer.sh  service_deployer.sh  setup-orbit-project.sh
docs/: architecture.md  structure.md
orbit/ci/docker/: docker-compose.yml
orbit/common/: config.yaml
orbit/db/elasticsearch/: Dockerfile  elasticsearch.yml
orbit/db/mongodb/: Dockerfile  mongod.conf
orbit/db/postgres/: Dockerfile  init.sql
orbit/monitoring/grafana/: Dockerfile
orbit/monitoring/logstash/: Dockerfile  logstash.conf
orbit/monitoring/loki/: Dockerfile  loki-config.yaml
orbit/monitoring/prometheus/: Dockerfile  prometheus.yml
orbit/services/cpp/: CMakeLists.txt  Dockerfile  deployment.yaml
orbit/services/cpp/src/: main.cpp
orbit/services/fastapi/: Dockerfile  deployment.yaml  requirements.txt
orbit/services/fastapi/src/: main.py
orbit/services/go/: Dockerfile  deployment.yaml
orbit/services/react/: Dockerfile  deployment.yaml
orbit/services/rust/: Dockerfile  deployment.yaml
orbit/services/spring/: Dockerfile  deployment.yaml  pom.xml
orbit/services/spring/src/main/java/com/orbit/processor/: ProcessorApplication.java
orbit/services/spring/src/main/java/com/orbit/processor/model/: TelemetryRecord.java
orbit/services/spring/src/main/java/com/orbit/processor/repository/: TelemetryRecordRepository.java
orbit/services/spring/src/main/resources/: application.properties  application.yml
orbit/services/vaadin/: Dockerfile  deployment.yaml
(+1 files in other folders)
